[gd_scene load_steps=6 format=3 uid="uid://dglptmm2yx2g6"]

[ext_resource type="Script" path="res://GUI/pause_menu/pause_menu.gd" id="1_bpwwu"]
[ext_resource type="PackedScene" uid="uid://k753rq4kamis" path="res://GUI/pause_menu/Inventory/inventory_slot.tscn" id="2_7yo68"]
[ext_resource type="Script" path="res://GUI/pause_menu/Inventory/Scripts/inventory_ui.gd" id="2_urrrb"]
[ext_resource type="Resource" uid="uid://cm5xbtntdt2kw" path="res://GUI/pause_menu/Inventory/player_inventory.tres" id="3_chybp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ol3n"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.784314, 0.584314, 0.054902, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_bpwwu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.431373, 0.431373, 0.431373, 0.647059)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = 107.0
offset_right = -138.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="button_load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = 4.0
offset_right = 81.0
offset_bottom = 27.0
text = "- paused -
"

[node name="ItemDescription" type="Label" parent="."]
offset_left = 64.0
offset_top = 232.0
offset_right = 384.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 12
text = "fdsafdsafasfasdfadsfsadfsadfsdfasadsdafadsf"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -92.0
offset_right = 280.0
offset_bottom = -20.0
grow_vertical = 2
scale = Vector2(1.96, 1.88)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2ol3n")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 6
script = ExtResource("2_urrrb")
data = ExtResource("3_chybp")

[node name="InventorySlot" parent="PanelContainer/GridContainer" instance=ExtResource("2_7yo68")]
clip_contents = true
layout_direction = 2
layout_mode = 2
